src/test/deca/context/invalid/variable_mauvais_nom.deca
//ERROR :3:
{
 int int = 3;
}